<resources>
    <string name="app_name">ConsumoAPI-Empleados</string>
    <string name="label_fullname">Nombre Completo</string>
    <string name="label_position">Cargo</string>
    <string name="button_detalle">Ver detalle</string>
    <string name="tvdatebirthday">Fecha de nacimiento</string>
    <string name="tvexperience">Años de experiencia</string>
    <string name="tvdateinit">Fecha de inicio</string>
    <string name="tvcountry">País de residencia</string>
    <string name="tvcity">Ciudad de residencia</string>
    <string name="tvloading">Cargando...</string>
    <string name="label_notdata">No hay datos</string>
    <string name="btn_registro">Registra empleado</string>
    <string name="labelUrl">Url de la imagen</string>
    <string name="label_regname">Nombres</string>
    <string name="label_regendname">Apellidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>